Fix loading spinner bleeding out colors

--- a/darkmode.scss
+++ b/darkmode.scss
@@ -423,4 +423,9 @@ body {
   text-decoration: underline;
 }
 
+.pushstate-spinner,
+.spinner {
+  filter: invert(100%) hue-rotate(180deg);
+}
+
 }
